fix(IVP): reduce width of collapsed IVP

--- a/app/ui-react/packages/ui/src/Integration/IntegrationVerticalFlow.css
+++ b/app/ui-react/packages/ui/src/Integration/IntegrationVerticalFlow.css
@@ -1,5 +1,5 @@
 .integration-vertical-flow {
-  min-width: 130px;
+  min-width: 100px;
   display: flex;
   flex-flow: row nowrap;
   flex: 1;
